Fix missing Login link on mobile when logged out.
This reverts commit 7d082c5d979faa6d3dbdcfc20d293e16a049c5c9; we no longer need its implementation.

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -1205,7 +1205,7 @@ span.headlineRss {
 
 @media (max-width: 75ch) {
 
-    .mobile-hidden.mobile-hidden {
+    .mobile-menu .mobile-hidden {
         display: none;
     }
 
@@ -1234,12 +1234,6 @@ span.headlineRss {
         width: 100%;
     }
 
-}
-
-@media (min-width: 75ch) {
-    .mobile-only {
-        display: none;
-    }
 }
 
 /*
@@ -2118,7 +2112,6 @@ img.dla-button {
 "Play Online" button
 */
 img.play-online-button {
-    display: block;
     background: url("/img/playonlinebtn.gif") no-repeat center center;
     width: 100px;
     height: 23px;
